# Modular-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragmentShader.frag
internal/component/: cameraComponent.h  lightComponent.h  modelComponent.h  nameComponent.h  transformComponent.h
internal/components/: cameraComponent.h  lightComponent.h  modelComponent.h  nameComponent.h  transformComponent.h
internal/core/: engine.h  renderer.h
internal/ecs/: componentManager.h  entityManager.h  systemManager.h
internal/foundation/core/: engine.h
internal/foundation/ecs/: componentManager.h  entityManager.h  systemManager.h
internal/loader/: materialLoader.h  meshLoader.h  shaderLoader.h
internal/rendering/: renderer.h
internal/rendering/loaders/: materialLoader.h  meshLoader.h
internal/rendering/resources/: material.h  mesh.h  shader.h
internal/system/: cameraSystem.h  inputSystem.h  lightSystem.h  renderSystem.h  sceneSystem.h  shaderSystem.h  timeSystem.h  transformSystem.h  uiSystem.h  windowSystem.h
internal/systems/: cameraSystem.h  inputSystem.h  lightSystem.h  renderSystem.h  resourceSystem.h  sceneSystem.h  shaderSystem.h  timeSystem.h  transformSystem.h  uiSystem.h  windowSystem.h
src/core/: engine.cpp  main.cpp  renderer.cpp
src/ecs/: entityManager.cpp
src/foundation/core/: engine.cpp  main.cpp
src/foundation/ecs/: entityManager.cpp
src/loader/: materialLoader.cpp  meshLoader.cpp  shaderLoader.cpp
src/rendering/: renderer.cpp
src/rendering/loaders/: materialLoader.cpp  meshLoader.cpp  shaderLoader.cpp
src/rendering/resources/: material.cpp  mesh.cpp  shader.cpp
src/system/: cameraSystem.cpp  inputSystem.cpp  lightSystem.cpp  renderSystem.cpp  sceneSystem.cpp  shaderSystem.cpp  transformSystem.cpp  uiSystem.cpp  windowSystem.cpp
src/systems/: cameraSystem.cpp  inputSystem.cpp  lightSystem.cpp  renderSystem.cpp  resourceSystem.cpp  sceneSystem.cpp  shaderSystem.cpp  timeSystem.cpp  transformSystem.cpp  uiSystem.cpp  windowSystem.cpp
